-Fixed mobile problems -> sidebar menu overlapping -Removed polygon offset on rental.html -Changed beesneeds.html header-image TODO: fix VEI buttons

--- a/css/beesneeds.css
+++ b/css/beesneeds.css
@@ -45,7 +45,9 @@ body {
 @media (min-width: 768px) {
 .header-image {
 	margin-bottom: 25px; 
-	background-image: url('../img/beesneeds/flowerheader.jpg');
+	background-image: url('../img/beesneeds/testheader.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 #title {
 	color: white; border-bottom: 1px solid white; margin-top: 150px; margin-bottom: 35px;
